--- a/package.json
+++ b/package.json
@@ -17,31 +17,30 @@
     "@angular/common": "6.0.7",
     "@angular/compiler": "6.0.7",
     "@angular/core": "6.0.7",
-    "@angular/fire": "^5.0.0",
+    "@angular/fire": "^5.0.2",
     "@angular/forms": "6.0.7",
     "@angular/http": "6.0.7",
     "@angular/platform-browser": "6.0.7",
     "@angular/platform-browser-dynamic": "6.0.7",
     "@angular/router": "6.0.7",
     "core-js": "^2.4.1",
-    "firebase": "^5.5.0",
+    "firebase": "^5.5.1",
     "jquery": "^3.3.1",
-    "npm": "^6.4.1",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "^6.0.8",
+    "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "6.0.7",
     "@angular/language-service": "6.0.7",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.4.2",
+    "@types/node": "^6.0.117",
+    "codelyzer": "^4.4.4",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
