--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zpmaps",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -12,32 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.7",
+    "@angular/animations": "7.2.6",
     "@angular/cdk": "^5.2.4",
-    "@angular/common": "6.0.7",
-    "@angular/compiler": "6.0.7",
-    "@angular/core": "6.0.7",
-    "@angular/fire": "^5.0.2",
-    "@angular/forms": "6.0.7",
-    "@angular/http": "6.0.7",
-    "@angular/platform-browser": "6.0.7",
-    "@angular/platform-browser-dynamic": "6.0.7",
-    "@angular/router": "6.0.7",
-    "core-js": "^2.4.1",
-    "firebase": "^5.5.1",
+    "@angular/common": "7.2.6",
+    "@angular/compiler": "7.2.6",
+    "@angular/core": "7.2.6",
+    "@angular/fire": "^5.1.1",
+    "@angular/forms": "7.2.6",
+    "@angular/http": "7.2.6",
+    "@angular/platform-browser": "7.2.6",
+    "@angular/platform-browser-dynamic": "7.2.6",
+    "@angular/router": "7.2.6",
+    "core-js": "^2.6.5",
+    "firebase": "^5.8.3",
     "jquery": "^3.3.1",
-    "rxjs": "^6.3.3",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.4.0",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "^6.2.3",
-    "@angular/compiler-cli": "6.0.7",
-    "@angular/language-service": "6.0.7",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.117",
-    "codelyzer": "^4.4.4",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "^7.3.3",
+    "@angular/compiler-cli": "7.2.6",
+    "@angular/language-service": "7.2.6",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.14.3",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.5",
@@ -49,6 +50,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2"
+    "typescript": "3.2.4"
   }
 }
