--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
     "@angular/common": "7.2.6",
     "@angular/compiler": "7.2.6",
     "@angular/core": "7.2.6",
-    "@angular/fire": "^5.1.1",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "7.2.6",
     "@angular/http": "7.2.6",
     "@angular/platform-browser": "7.2.6",
     "@angular/platform-browser-dynamic": "7.2.6",
     "@angular/router": "7.2.6",
     "core-js": "^2.6.5",
-    "firebase": "^5.8.3",
+    "firebase": "^5.9.2",
     "jquery": "^3.3.1",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^7.3.3",
+    "@angular-devkit/build-angular": "^0.13.7",
+    "@angular/cli": "^7.3.7",
     "@angular/compiler-cli": "7.2.6",
     "@angular/language-service": "7.2.6",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^6.14.3",
+    "@types/node": "^6.14.4",
     "codelyzer": "^4.5.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
